--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.type=TRACE
 
 server.port=5000
